feat: slides update

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,viewport-fit=cover">
-    <base href="/jennwike/osdc-virtual-summit-2020/">
+    <base href="/jenwikehuger/osdc-virtual-summit-2020/">
     <title>OSDC Virtual Summit 2020</title>
     <meta property="og:site_name" content="OSDC Virtual Summit 2020">
     <meta property="og:title" content="OSDC Virtual Summit 2020">
-    <meta name="author" content="jennwike">
+    <meta name="author" content="jenwikehuger">
     <meta name="description" content="A virtual event for the Opensource.com Correspondents">
     <meta property="og:description" content="A virtual event for the Opensource.com Correspondents">
     <meta property="og:site_name" content="OSDC Virtual Summit 2020">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://beta.deckdeckgo.io/jennwike/osdc-virtual-summit-2020/">
+    <meta property="og:url" content="https://beta.deckdeckgo.io/jenwikehuger/osdc-virtual-summit-2020/">
     <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fpresentations%2Fosdc-virtual-summit-2020%2Fdeckdeckgo.png?alt=media">
     <meta property="og:image:type" content="image/png">
     <meta name="twitter:site" content="@deckdeckgo">
@@ -21,12 +21,12 @@
     <meta name="twitter:description" content="A virtual event for the Opensource.com Correspondents">
     <meta name="twitter:image:src" content="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fpresentations%2Fosdc-virtual-summit-2020%2Fdeckdeckgo.png?alt=media">
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="apple-touch-icon" sizes="180x180" href="/jennwike/osdc-virtual-summit-2020/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/jennwike/osdc-virtual-summit-2020/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/jennwike/osdc-virtual-summit-2020/assets/favicon/favicon-16x16.png">
-    <link rel="shortcut icon" href="/jennwike/osdc-virtual-summit-2020/assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/jenwikehuger/osdc-virtual-summit-2020/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/jenwikehuger/osdc-virtual-summit-2020/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/jenwikehuger/osdc-virtual-summit-2020/assets/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="/jenwikehuger/osdc-virtual-summit-2020/assets/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-config" content="/jennwike/osdc-virtual-summit-2020/assets/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="/jenwikehuger/osdc-virtual-summit-2020/assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <script>
         if ('serviceWorker' in navigator) {
@@ -87,6 +87,19 @@
                     <h1 slot="title" spellcheck="false">Correspondent Virtual Summit 2020</h1>
                     <section slot="content" spellcheck="false">Opensource.com</section>
                 </deckgo-slide-title>
+                <deckgo-slide-content>
+                    <h2 slot="title" spellcheck="false">What you need to know</h2>
+                    <section slot="content" spellcheck="false">Video chat - Jitsi link<div><br></div>
+                        <div>Text chatting with the group - Jitsi chat</div>
+                        <div><br></div>
+                        <div>Swag in the mail</div>
+                        <div><br></div>
+                        <div>Stickers in the mail and digital files (Jen to share via email)</div>
+                        <div><br></div>
+                        <div>Today&#39;s agenda</div>
+                        <div>--Introductions and poll and game<br>--Team presentations, after each one 5 mins for questions and discussion<br><br></div>
+                    </section>
+                </deckgo-slide-content>
                 <deckgo-slide-split style="--slide-split-color-start:rgba(0,0,0,1); background: rgb(255, 255, 255);">
                     <ol slot="start" spellcheck="true">
                         <li>Introduce yourself 
@@ -141,42 +154,42 @@
                     <h2 slot="title" spellcheck="false">Q&amp;A and Discussion Notes</h2>
                     <section slot="content" spellcheck="false"></section>
                 </deckgo-slide-content><button slot="actions" style="color: inherit; outline: none; background: transparent; border-color: transparent; font-size: 1.6rem;">
-                    <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/more.svg" aria-label="More options"></ion-icon>
+                    <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/more.svg" aria-label="More options"></ion-icon>
                 </button>
             </deckgo-deck>
             <deckgo-remote></deckgo-remote>
         </ion-content>
         <ion-fab vertical="bottom" horizontal="end" slot="fixed" id="navigation"><button id="play" class="navigation ion-activatable" style="display: none;">
                 <ion-ripple-effect></ion-ripple-effect>
-                <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/play.svg" aria-label="Play video" style="font-size: 1.4em;"></ion-icon>
+                <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/play.svg" aria-label="Play video" style="font-size: 1.4em;"></ion-icon>
             </button> <button id="pause" class="navigation ion-activatable" style="display: none;">
                 <ion-ripple-effect></ion-ripple-effect>
-                <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/pause.svg" aria-label="Pause video" style="font-size: 1.4em;"></ion-icon>
+                <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/pause.svg" aria-label="Pause video" style="font-size: 1.4em;"></ion-icon>
             </button> <button id="previous" class="navigation ion-activatable" aria-label="Previous slide">
                 <ion-ripple-effect></ion-ripple-effect>
-                <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/arrow-back.svg" aria-label="Previous slide" style="font-size: 1.4em;"></ion-icon>
+                <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/arrow-back.svg" aria-label="Previous slide" style="font-size: 1.4em;"></ion-icon>
             </button> <button id="next" class="navigation ion-activatable" aria-label="Next slide">
                 <ion-ripple-effect></ion-ripple-effect>
-                <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/arrow-forward.svg" aria-label="Next slide" style="font-size: 1.4em;"></ion-icon>
+                <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/arrow-forward.svg" aria-label="Next slide" style="font-size: 1.4em;"></ion-icon>
             </button> <button id="slidePicker" class="navigation ion-activatable" aria-label="Jump to a particular slide">
                 <ion-ripple-effect></ion-ripple-effect>
-                <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/list.svg" aria-label="Jump to a particular slide" style="font-size: 1.4em;"></ion-icon>
+                <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/list.svg" aria-label="Jump to a particular slide" style="font-size: 1.4em;"></ion-icon>
             </button> <button id="fullScreen" class="navigation ion-activatable hide-on-mobile" aria-label="Full screen">
                 <ion-ripple-effect></ion-ripple-effect>
-                <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/expand.svg" aria-label="Full screen" style="font-size: 1.4em;"></ion-icon>
+                <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/expand.svg" aria-label="Full screen" style="font-size: 1.4em;"></ion-icon>
             </button> <button id="remote" class="navigation ion-activatable">
                 <ion-ripple-effect></ion-ripple-effect>
-                <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/phone-portrait.svg" aria-label="Open Remote" style="font-size: 1.4em;"></ion-icon>
+                <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/phone-portrait.svg" aria-label="Open Remote" style="font-size: 1.4em;"></ion-icon>
             </button></ion-fab>
         <ion-popover-controller></ion-popover-controller>
         <ion-modal-controller></ion-modal-controller>
         <ion-alert-controller></ion-alert-controller>
         <web-social-share show="false" style="--web-social-share-backdrop-opacity: 0.5;">
-            <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/twitter.svg" aria-label="Twitter" slot="twitter" style="color: #00aced; font-size: 1.6rem; display: block;"></ion-icon>
-            <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/linkedin.svg" aria-label="Linkedin" slot="linkedin" style="color: #0077b5; font-size: 1.6rem; display: block;"></ion-icon>
-            <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/mail.svg" aria-label="Email" slot="email" style="color: #ff8ea3; font-size: 1.6rem; display: block;"></ion-icon>
-            <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/whatsapp.svg" aria-label="WhatsApp" slot="whatsapp" style="color: #25D366; font-size: 1.6rem; display: block;"></ion-icon>
-            <ion-icon src="/jennwike/osdc-virtual-summit-2020/assets/icons/ionicons/hackernews.svg" aria-label="Hacker News" slot="hackernews" style="color: #ff6000; font-size: 1.6rem; display: block;"></ion-icon>
+            <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/twitter.svg" aria-label="Twitter" slot="twitter" style="color: #00aced; font-size: 1.6rem; display: block;"></ion-icon>
+            <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/linkedin.svg" aria-label="Linkedin" slot="linkedin" style="color: #0077b5; font-size: 1.6rem; display: block;"></ion-icon>
+            <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/mail.svg" aria-label="Email" slot="email" style="color: #ff8ea3; font-size: 1.6rem; display: block;"></ion-icon>
+            <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/whatsapp.svg" aria-label="WhatsApp" slot="whatsapp" style="color: #25D366; font-size: 1.6rem; display: block;"></ion-icon>
+            <ion-icon src="/jenwikehuger/osdc-virtual-summit-2020/assets/icons/ionicons/hackernews.svg" aria-label="Hacker News" slot="hackernews" style="color: #ff6000; font-size: 1.6rem; display: block;"></ion-icon>
         </web-social-share>
     </ion-app><noscript>Please enable Javascript to access this presentation.</noscript></script>
 </body>
