feat: slides update

--- a/src/index.html
+++ b/src/index.html
@@ -313,20 +313,27 @@
                     <section slot="content" spellcheck="false"></section>
                 </deckgo-slide-content>
                 <deckgo-slide-content custom-background="true">
-                    <h2 slot="title" spellcheck="true" style="text-align: center;">What to write about with Seth
+                    <h2 slot="title" spellcheck="true" style="text-align: center;">
+                        <div><span style="color: rgb(255, 255, 255);"><br></span></div><span style="color: rgb(255, 255, 255);">
+                            <div><span style="color: rgb(255, 255, 255);"><br></span></div>What to write about with Seth
+                        </span>
+
                     </h2>
-                    <section slot="content" spellcheck="true" style="text-align: center;"><span style="background-color: rgb(235, 20, 76);"></span><span style="color: rgb(255, 255, 255);"><span style="background-color: rgb(235, 20, 76);">Writing formats</span>
+                    <section slot="content" spellcheck="true" style="text-align: center;"><span style="background-color: rgb(235, 20, 76);"></span><span style="color: rgb(255, 255, 255);"><span style="background-color: rgb(235, 20, 76);">Writing formats
+                            </span>
                             <div><span style="background-color: rgb(235, 20, 76);"><br></span></div>
-                            <div><span style="background-color: rgb(235, 20, 76);">Writing topics</span></div>
+                            <div><span style="background-color: rgb(235, 20, 76);">Writing topics
+                                </span></div>
                             <div><span style="background-color: rgb(235, 20, 76);"><br></span></div>
-                            <div><span style="background-color: rgb(235, 20, 76);">Thoughts on writing</span></div>
+                            <div><span style="background-color: rgb(235, 20, 76);">Thoughts on writing
+                                </span></div>
                         </span>
                         <div><span style="background-color: rgb(235, 20, 76);"></span>
                             <div></div>
                         </div>
                     </section>
                     <div slot="background">
-                        <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1563097111-9ef3f0d5c0e5?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="Junge tippt am Laptop. Instalation. "></deckgo-lazy-img>
+                        <deckgo-lazy-img img-src="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2Fredhat_laptop.jpg?alt=media&amp;token=deb4cb65-144e-4cd2-82fc-e325140d4794" img-alt="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2Fredhat_laptop.jpg?alt=media&amp;token=deb4cb65-144e-4cd2-82fc-e325140d4794"></deckgo-lazy-img>
                     </div>
                 </deckgo-slide-content>
                 <deckgo-slide-split>
@@ -346,18 +353,19 @@
                     </section>
                 </deckgo-slide-split>
                 <deckgo-slide-split custom-background="true">
-                    <section slot="start" style="text-align: center;"><span style="font-weight: bold; color: rgb(255, 255, 255); background-color: rgb(252, 185, 0);"></span><span style="background-color: rgb(235, 20, 76);"><span style="font-weight: bold; color: rgb(255, 255, 255);"></span></span><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76);"><span style="font-weight: bold; color: rgb(255, 255, 255);">-- Linux (commands, how to)</span></span></span>
+                    <section slot="start" style="text-align: center;"><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76);"><span style="font-weight: bold; color: rgb(255, 255, 255);">Linux (commands, how to)
+                                </span></span></span>
                         <div><span style="font-size: x-large;"><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);"><br></span></span></div>
-                        <div><span style="font-size: x-large;"><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);">-- Python</span><span style="background-color: rgb(235, 20, 76);"> </span></span></div>
+                        <div><span style="font-size: x-large;"><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);">Python</span></span></div>
                         <div><span style="font-size: x-large;"><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);"><br></span></span></div>
-                        <div><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76);"></span><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);">-- Git</span><span style="background-color: rgb(235, 20, 76);"> </span></span></div>
-                        <div><span style="font-size: x-large;"><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);"><br></span></span></div>
-                        <div><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76);"></span><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);">-- Resource pages</span><span style="background-color: rgb(235, 20, 76);"> </span></span></div>
-                        <div><span style="font-size: x-large;"><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);">(&quot;What is Git?&quot;, &quot;What is Java?&quot;, etc.)</span></span><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76); font-size: 1.4em;"></span><span style="background-color: rgb(235, 20, 76);"><br></span>
+                        <div><span style="font-size: x-large;"><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);">Git</span></span></div>
+                        <div><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76);"><br></span></span></div>
+                        <div><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76); color: rgb(255, 255, 255); font-weight: bold;">Raspberry Pi</span></span></div>
+                        <div>
                             <div><span style="font-weight: bold; color: rgb(255, 255, 255); background-color: rgb(252, 185, 0);"></span></div>
                         </div>
                     </section>
-                    <section slot="end" style="text-align: center;"><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);">Raspberry Pi</span></section>
+                    <section slot="end" style="text-align: center;"><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);">Resource pages<br>(&quot;What is Git?&quot;, &quot;What is Java?&quot;, etc.)</span></section>
                     <div slot="background">
                         <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1572565636262-b583c20d5c60?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="Breakfast in a quiet morning"></deckgo-lazy-img>
                     </div>
