feat: slides update

--- a/src/index.html
+++ b/src/index.html
@@ -312,6 +312,20 @@
                     <h2 slot="title" spellcheck="false">Year in Review with Lauren</h2>
                     <section slot="content" spellcheck="false"></section>
                 </deckgo-slide-content>
+                <deckgo-slide-content>
+                    <h2 slot="title">Correspondent Stats at a Glance<br></h2>
+                    <section slot="content">23 correspondents across 8 countries and 10 US states<div><br>256 articles published</div>
+                        <div><br>3.5 million page views <br></div>
+                    </section>
+                </deckgo-slide-content>
+                <deckgo-slide-split>
+                    <h2 slot="start">Top 20 most-read articles<br></h2>
+                    <deckgo-lazy-img slot="end"></deckgo-lazy-img>
+                </deckgo-slide-split>
+                <deckgo-slide-split>
+                    <h2 slot="start">BY TAG</h2>
+                    <deckgo-lazy-img slot="end"></deckgo-lazy-img>
+                </deckgo-slide-split>
                 <deckgo-slide-content custom-background="true">
                     <h2 slot="title" spellcheck="true" style="text-align: center;">
                         <div><span style="color: rgb(255, 255, 255);"><br></span></div><span style="color: rgb(255, 255, 255);">
@@ -337,18 +351,40 @@
                     </div>
                 </deckgo-slide-content>
                 <deckgo-slide-split>
-                    <section slot="start"><b>Articles</b>
-                        <div><br>-- how to / step-by-step<br>-- informative<br>-- my experience<br>-- interviews<br>-- collaborations with other Correspondents<br>-- reviews of tools, books, etc.<br>-- TIP: write articles that your current article depends on (example: my &quot;SSH series&quot;)<br><br><b>Polls</b></div>
-                        <div><br>-- easy to create<br>-- introductions 2-3 paragraphs<div></div>
+                    <section slot="start"><b>Articles
+                        </b>
+                        <div><br>-- how to / step-by-step
+                            <br>-- informative / What is... (Git, Java, DevOps, etc)<br>-- my experience
+                            <br>-- interviews
+                            <br>-- collaborations with other Correspondents
+                            <br>-- reviews of tools, books, etc.
+                            <br>-- TIP: write articles that your current article depends on (example: my &quot;SSH series&quot;)
+                            <br><br><b>Polls
+                            </b>
+                        </div>
+                        <div><br>-- easy to create
+                            <br>-- introductions 2-3 paragraphs
+                            <div></div>
                         </div>
                     </section>
-                    <section slot="end"><b>Cheat sheets</b><br><br>-- Linux commands (pandoc, tmux, pip, vim)<br>-- Coding language {syntax, functions, conditionals, operators}<br>-- Syntax (Markdown, Ansible k8s module)<br>-- Conceptual (Microservices, Raspberry Pi)<br>-- Templates for Scribus and LibreOffice<div><br></div>
-                        <div><b>eBooks</b>
+                    <section slot="end"><b>Cheat sheets
+                        </b><br><br>-- Linux commands (pandoc, tmux, pip, vim)
+                        <br>-- Coding language {syntax, functions, conditionals, operators}
+                        <br>-- Syntax (Markdown, Ansible k8s module)
+                        <br>-- Conceptual (Microservices, Raspberry Pi)
+                        <br>-- Templates for Scribus and LibreOffice
+                        <div><br></div>
+                        <div><b>eBooks
+                            </b>
                             <div><br></div>
-                            <div>-- Collections of articles by one author</div>
-                            <div>-- Collections of articles by multiple authors</div>
-                            <div>-- Focused on a topic like &quot;productivity tools&quot;</div>
-                            <div>-- 3-4 articles minimum</div>
+                            <div>-- Collections of articles by one author
+                            </div>
+                            <div>-- Collections of articles by multiple authors
+                            </div>
+                            <div>-- Focused on a topic like &quot;productivity tools&quot;
+                            </div>
+                            <div>-- 3-4 articles minimum
+                            </div>
                         </div>
                     </section>
                 </deckgo-slide-split>
@@ -361,11 +397,20 @@
                         <div><span style="font-size: x-large;"><span style="color: rgb(255, 255, 255); font-weight: bold; background-color: rgb(235, 20, 76);">Git</span></span></div>
                         <div><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76);"><br></span></span></div>
                         <div><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76); color: rgb(255, 255, 255); font-weight: bold;">Raspberry Pi</span></span></div>
+                        <div><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76); color: rgb(255, 255, 255); font-weight: bold;"><br></span></span></div>
+                        <div><span style="font-size: x-large;"><span style="background-color: rgb(235, 20, 76); color: rgb(255, 255, 255); font-weight: bold;">Programming</span></span></div>
                         <div>
                             <div><span style="font-weight: bold; color: rgb(255, 255, 255); background-color: rgb(252, 185, 0);"></span></div>
                         </div>
                     </section>
-                    <section slot="end" style="text-align: center;"><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);">Resource pages<br>(&quot;What is Git?&quot;, &quot;What is Java?&quot;, etc.)</span></section>
+                    <section slot="end" style="text-align: center;"><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);">Mac, Windows, Chromebook</span>
+                        <div><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);"><br>Using open source apps on _______</span></div>
+                        <div><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);"><br>Switching from _______ to Linux</span></div>
+                        <div><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);"><br>Kubernetes</span></div>
+                        <div><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);"><br>Cloud</span></div>
+                        <div><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);"><br>Ansible</span></div>
+                        <div><span style="background-color: rgb(235, 20, 76); font-weight: bold; color: rgb(255, 255, 255);"><br>Rust<br></span></div>
+                    </section>
                     <div slot="background">
                         <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1572565636262-b583c20d5c60?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="Breakfast in a quiet morning"></deckgo-lazy-img>
                     </div>
@@ -376,6 +421,17 @@
                     <div slot="background">
                         <deckgo-lazy-img img-src="https://images.unsplash.com/reserve/YEc7WB6ASDydBTw6GDlF_antalya-beach-lulu.jpg?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="https://unsplash.com/photos/ie8WW5KUx3o"></deckgo-lazy-img>
                     </div>
+                </deckgo-slide-content>
+                <deckgo-slide-content>
+                    <h2 slot="title">A few of our favorite prompts</h2>
+                    <section slot="content">My Linux / open source / coding story<div><br>How I learned…</div>
+                        <div><br>Why I...</div>
+                        <div><br>X tools / libraries / modules / commands to do Y</div>
+                        <div><br>Switching from X to Y</div>
+                        <div><br>Drop X for Y</div>
+                        <div><br>Surprising ways to use ______</div>
+                        <div><br>Before I got started with X, I had to do Y</div>
+                    </section>
                 </deckgo-slide-content>
                 <deckgo-slide-aspect-ratio>
                     <deckgo-drr slot style="--height:24.6966%; --width:16.367%; --left:7.42068%; --top:33.6309%; --rotate:0deg; --pointer-events:none; --user-select:none;">
